More binder tests
Cleanup and simplification

--- a/tests/src/Loader/binding/assemblies/bindfailures/BindingFailures.csproj
+++ b/tests/src/Loader/binding/assemblies/bindfailures/BindingFailures.csproj
@@ -32,6 +32,12 @@
     <ProjectReference Include="DependencyAssembly_V2.5.csproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="DependencyAssembly_V2.7.csproj">
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
+    <ProjectReference Include="DependencyAssembly_V3.csproj">
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
 </Project>
