--- a/tests/src/Loader/binding/assemblies/bindfailures/BindingFailures.csproj
+++ b/tests/src/Loader/binding/assemblies/bindfailures/BindingFailures.csproj
@@ -18,11 +18,10 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assertion.ExceptionMessages.cs" />
     <Compile Include="BindingFailures.cs" />
-    <Compile Include="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), CLRTest.Execute.targets))\Interop\common\Assertion.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Common\CoreCLRTestLibrary\CoreCLRTestLibrary.csproj" />
     <ProjectReference Include="DependencyAssembly_V1.csproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
